# financial_datapipeline

./: LICENSE  Makefile.txt  README.md  create_partition_table.sql  local.ini  pyproject.toml  rabbitmq.yml
financialdata/: config.py  producer.py  scheduler.py
financialdata/api/: config.py  main.py
financialdata/backend/db/: __init__.py  clients.py  db.py  router.py
financialdata/crawler/: taiwan_futures_daily.py  taiwan_stock_price.py
financialdata/schema/: dataset.py
financialdata/tasks/: task.py  worker.py
